Petites modif sur la fonction de projection

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,6 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fd7d4725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VERSION A FINIR, inspiree de voxel pose\n",
+    "\n",
+    "@tf.function\n",
+    "def tf_point_3d_to_2d(points, R, T, f, c, k, p):\n",
+    "    # pr tester\n",
+    "    Np = 1\n",
+    "    Nj = 17\n",
+    "    # histoire de tester ....\n",
+    "    B=1\n",
+    "    Nd=3\n",
+    "    #   B, Np, Nj, Nd = points.shape # [batch_size, Number of persons, Number of joints, Dimension]\n",
+    "    # points = points.reshape(B, -1, 3).transpose(1, 2) # [B, Np*Nj, Nd] --> [B, Nd, Np*Nj]\n",
+    "    points_cam = tf.matmul(R, tf.reshape(tensor_pts,(3,17)) - T) # Translation + Rotation\n",
+    "    out = points_cam[:2]/(points_cam[2] + 1e-5) # devision by depth (and avoiding division by 0)\n",
+    "    # Camera distortion\n",
+    "    r2 = tf.reduce_sum(out ** 2, axis=0,keepdims=True) # [B, Np*Nj]\n",
+    "    r2exp = tf.concat([r2,r2**2,r2**3], axis=0, name='concat')\n",
+    "    kexp = tf.tile(k,(1,17))\n",
+    "    radial = 1 + tf.einsum('ij,ij->j', kexp, r2exp)\n",
+    "    tan = p[0] * out[1] + p[1] * out[0]\n",
+    "    cor=(radial + 2 * tan)\n",
+    "    corr=tf.repeat([cor,cor],repeats=[1 for i in range(17)], axis=-1)\n",
+    "    out = out * corr + np.outer(tf.concat([p[1],p[0]],axis=0), r2)\n",
+    "\n",
+    "    \n",
+    "    ### A finir\n",
+    "    \n",
+    "    return out_pixel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "83022b99",
    "metadata": {},
