--- a/test/test_fundamental_matrix.ipynb
+++ b/test/test_fundamental_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27d75654",
+   "id": "8a16a2f6",
    "metadata": {},
    "source": [
     "## Tensorflow"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a4d35b69",
+   "id": "d279d9b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcae4c6",
+   "id": "ca4cd0d0",
    "metadata": {},
    "source": [
     "### Def des fonctions "
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "90aa2f2f",
+   "id": "6b6b8134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697b862e",
+   "id": "fb726e4e",
    "metadata": {},
    "source": [
     "#### On prend deux matrices de projection de deux camera de Campus_seq et on calcule F\n"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "29462f78",
+   "id": "2f4669d6",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b091e859",
+   "id": "d3d09d12",
    "metadata": {},
    "source": [
     "\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "49022f83",
+   "id": "2015fda8",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee35e023",
+   "id": "fb61aaf0",
    "metadata": {},
    "source": [
     "#### Ces deux valeurs doivent être égales à [220,158,1] et [ 241  ,172,1]               (groudTruth de VoxelPose)"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54fd3cbf",
+   "id": "1c364a21",
    "metadata": {},
    "source": [
     "### On vérifie $x^t F x' = 0$  \n",
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9aa153fe",
+   "id": "77abf57c",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a303fcc",
+   "id": "441ebd23",
    "metadata": {},
    "source": [
     "=> Why ?!"
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a1a128",
+   "id": "9471a0d6",
    "metadata": {},
    "source": [
     "# Pytorch"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b953ec",
+   "id": "7b9cf12f",
    "metadata": {},
    "source": [
     "### Def des fonction"
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6a1ee641",
+   "id": "a67b07c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0ed7b5",
+   "id": "01393857",
    "metadata": {},
    "source": [
     "#### On prend deux matrices de projection de deux camera de Campus_seq et on calcule F\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "32333122",
+   "id": "6546aebf",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a57b74",
+   "id": "e4039e02",
    "metadata": {},
    "source": [
     "### On vérifie $x=PX$  \n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "148ef51e",
+   "id": "3fee3a7e",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8da08ee",
+   "id": "377051e0",
    "metadata": {},
    "source": [
     "#### Ces deux valeurs doivent être égales à [220,158,1] et [ 241  ,172,1]               (groudTruth de VoxelPose)\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0d6d4718",
+   "id": "a7de8a30",
    "metadata": {},
    "outputs": [
     {
@@ -638,16 +638,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3161927",
+   "id": "aa7dd98a",
    "metadata": {},
    "source": [
     "=> YESSSSS ! "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7c81395",
+   "metadata": {},
+   "source": [
+    "# L'erreur sur tf ??"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "7702fc5e",
+   "execution_count": 83,
+   "id": "814d693b",
    "metadata": {},
    "outputs": [
     {
@@ -656,22 +664,75 @@
        "array([[-16384.]], dtype=float32)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.linalg.matmul(tf.linalg.matmul(tf.transpose(x2,(1,0)),f),x1).numpy()"
+    "## x2^t F x1  donne pas zéro\n",
+    "tf.matmul(tf.matmul(tf.transpose(x2,(1,0)),f),x1).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16556e90",
+   "metadata": {},
+   "source": [
+    "### la valeur de x2^t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fea2cc6f",
+   "execution_count": 85,
+   "id": "6cb5d873",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[219.86467, 157.15799,   1.     ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.transpose(x2,(1,0)).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa04a6a4",
+   "metadata": {},
+   "source": [
+    "### si on arrandit ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "15c20ca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2t=tf.constant([[219.8647, 157.1580,   1.0000 ]])\n",
+    "\n",
+    "tf.matmul(tf.matmul(x2t,f),x1).numpy()"
+   ]
   }
  ],
  "metadata": {
