--- a/test/test_fundamental_matrix.ipynb
+++ b/test/test_fundamental_matrix.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "d279d9b3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6b6b8134",
    "metadata": {},
    "outputs": [],
@@ -70,10 +70,10 @@
     "        raise ValueError(f\"Fm must be a (*, 3, 3) tensor. Got {Fm.shape}\")\n",
     "\n",
     "        ###########Acompleter\n",
-    "    if pts1.size(-1) == 2:\n",
+    "    if pts1.shape[1] == 2:\n",
     "        pts1 = convert_points_to_homogeneous(pts1)\n",
     "\n",
-    "    if pts2.size(-1) == 2:\n",
+    "    if pts2.shape[1] == 2:\n",
     "        pts2 = convert_points_to_homogeneous(pts2)\n",
     "\n",
     "    # From Hartley and Zisserman, symmetric epipolar distance (11.10)\n",
@@ -90,10 +90,7 @@
     "\n",
     "\n",
     "    # denominator_inv =  1/ (((Fx)_1**2) + (Fx)_2**2)) +  1/ (((F^Tx')_1**2) + (F^Tx')_2**2))\n",
-    "    denominator_inv = 1.0 / (line1_in_2[..., :2].norm(2, dim=2).pow(2)) + 1.0 / (\n",
-    "        line2_in_1[..., :2].norm(2, dim=2).pow(2)\n",
-    "    )\n",
-    "    \n",
+    "\n",
     "    denominator_inv = 1.0 / (tf.pow(tf.norm(line1_in_2[..., :2],axis=2),2)) + 1.0 / (\n",
     "        tf.pow(tf.norm(line2_in_1[..., :2],axis=2),2)\n",
     "    )\n",
@@ -160,7 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
+   "id": "856e0db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from epipolar_geo import *\n",
+    "import tensorflow as tf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2f4669d6",
    "metadata": {},
    "outputs": [
@@ -172,7 +180,7 @@
        "       [-1.50978688e+08, -1.10211149e+09,  7.75774781e+10]], dtype=float32)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "2015fda8",
    "metadata": {},
    "outputs": [
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "77abf57c",
    "metadata": {},
    "outputs": [
@@ -264,7 +272,7 @@
        "array([[90112.]], dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,10 +283,95 @@
   },
   {
    "cell_type": "markdown",
+   "id": "527cad34",
+   "metadata": {},
+   "source": [
+    "## Distance épipolaire\n",
+    "On teste la fonction distance sylétrique épipolaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dd9dd1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 3, 3), dtype=float32, numpy=\n",
+       "array([[[-1.20740205e+04,  1.59010288e+06, -1.49354128e+08],\n",
+       "        [ 1.91498150e+06,  6.74619453e+04,  3.05496512e+08],\n",
+       "        [-1.50978688e+08, -1.10211149e+09,  7.75774781e+10]]],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On adapte le shape de la matrice fondamentale\n",
+    "Fmt=tf.constant([ft.numpy()])\n",
+    "Fmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0edb5202",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[240.8366 , 172.84128,   1.     ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Les coordonées doivent être en vecteurs lignes\n",
+    "pts1t=tf.transpose(x1t, [1, 0])\n",
+    "pts2t=tf.transpose(x2t, [1, 0])\n",
+    "pts1t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9fe7e409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[0.9999997]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Résultat\n",
+    "\n",
+    "dt = tf_symmetrical_epipolar_distance(pts1t,pts2t,Fmt,  squared= True, eps = 1e-8)\n",
+    "# score (edge feature)\n",
+    "tf.exp(-10*dt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "441ebd23",
    "metadata": {},
    "source": [
-    "=> Why ?!"
+    "=> Okay"
    ]
   },
   {
@@ -299,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "id": "a67b07c5",
    "metadata": {},
    "outputs": [],
@@ -333,6 +426,7 @@
     "            points.shape))\n",
     "\n",
     "    return torch.nn.functional.pad(points, (0, 1), \"constant\", 1.0)\n",
+    "\n",
     "def symmetrical_epipolar_distance(\n",
     "    pts1: torch.Tensor, pts2: torch.Tensor, Fm: torch.Tensor, squared: bool = True, eps: float = 1e-8\n",
     ") -> torch.Tensor:\n",
@@ -371,9 +465,8 @@
     "    # line2_in_1: torch.Tensor = (F.permute(0,2,1) @ pts2.permute(0,2,1)).permute(0,2,1)\n",
     "\n",
     "    # Instead we can just transpose F once and switch the order of multiplication\n",
-    "    F_t: torch.Tensor = Fm.permute(0, 2, 1).type(torch.LongTensor)\n",
-    "    print(pts1)\n",
-    "    line1_in_2 = pts1 @ F_t\n",
+    "    F_t: torch.Tensor = Fm.permute(0, 2, 1)\n",
+    "    line1_in_2: torch.Tensor = pts1 @ F_t\n",
     "    line2_in_1: torch.Tensor = pts2 @ Fm\n",
     "\n",
     "    # numerator = (x'^T F x) ** 2\n",
@@ -469,7 +562,6 @@
     "        raise AssertionError(P1.shape, points1.shape)\n",
     "\n",
     "    # allocate and construct the equations matrix with shape (*, 4, 4)\n",
-    "    print('_______________________________')\n",
     "    points_shape = max(points1.shape, points2.shape)  # this allows broadcasting\n",
     "    X = torch.zeros(points_shape[:-1] + (4, 4)).type_as(points1)\n",
     "    print(X)\n",
@@ -533,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "id": "6546aebf",
    "metadata": {},
    "outputs": [
@@ -545,7 +637,7 @@
        "       [-1.5097872e+08, -1.1021116e+09,  7.7577454e+10]], dtype=float32)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "id": "3fee3a7e",
    "metadata": {},
    "outputs": [
@@ -617,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "id": "a7de8a30",
    "metadata": {},
    "outputs": [
@@ -627,13 +719,97 @@
        "array([[0.]], dtype=float32)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "torch.matmul(torch.matmul(torch.transpose(x2,1,0),f),x1).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ffd54f",
+   "metadata": {},
+   "source": [
+    "## Distance epipolaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ee767335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fm=torch.tensor([f.numpy()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "60ea8748",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[240.8366, 172.8413,   1.0000]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pts1=torch.transpose(x1, 0, 1)\n",
+    "pts2=torch.transpose(x2, 0, 1)\n",
+    "pts1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "60f0524b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d=symmetrical_epipolar_distance(pts1, pts2, Fm) \n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "add5a18b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(-10*d)"
    ]
   },
   {
@@ -733,6 +909,14 @@
     "\n",
     "tf.matmul(tf.matmul(x2t,f),x1).numpy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bdf48da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
