Test de la distance épipolaire --> test.ipynb

--- a/test/test_fundamental_matrix.ipynb
+++ b/test/test_fundamental_matrix.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "d279d9b3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "6b6b8134",
    "metadata": {},
    "outputs": [],
@@ -157,18 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "856e0db1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from epipolar_geo import *\n",
-    "import tensorflow as tf\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "2f4669d6",
    "metadata": {},
    "outputs": [
@@ -180,7 +169,7 @@
        "       [-1.50978688e+08, -1.10211149e+09,  7.75774781e+10]], dtype=float32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "2015fda8",
    "metadata": {},
    "outputs": [
@@ -262,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "77abf57c",
    "metadata": {},
    "outputs": [
@@ -272,7 +261,7 @@
        "array([[90112.]], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "dd9dd1d4",
    "metadata": {},
    "outputs": [
@@ -306,7 +295,7 @@
        "      dtype=float32)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "0edb5202",
    "metadata": {},
    "outputs": [
@@ -329,7 +318,7 @@
        "<tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[240.8366 , 172.84128,   1.     ]], dtype=float32)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "9fe7e409",
    "metadata": {},
    "outputs": [
@@ -353,7 +342,7 @@
        "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[0.9999997]], dtype=float32)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +368,7 @@
    "id": "9471a0d6",
    "metadata": {},
    "source": [
-    "# Pytorch"
+    "# Pytorch  (pour comparer)"
    ]
   },
   {
@@ -392,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "a67b07c5",
    "metadata": {},
    "outputs": [],
@@ -625,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "6546aebf",
    "metadata": {},
    "outputs": [
@@ -637,7 +626,7 @@
        "       [-1.5097872e+08, -1.1021116e+09,  7.7577454e+10]], dtype=float32)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "id": "3fee3a7e",
    "metadata": {},
    "outputs": [
@@ -709,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "a7de8a30",
    "metadata": {},
    "outputs": [
@@ -719,7 +708,7 @@
        "array([[0.]], dtype=float32)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "ee767335",
    "metadata": {},
    "outputs": [],
@@ -748,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "id": "60ea8748",
    "metadata": {},
    "outputs": [
@@ -758,7 +747,7 @@
        "tensor([[240.8366, 172.8413,   1.0000]])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "id": "60f0524b",
    "metadata": {},
    "outputs": [
@@ -781,7 +770,7 @@
        "tensor([[0.]])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "id": "add5a18b",
    "metadata": {},
    "outputs": [
@@ -803,7 +792,7 @@
        "tensor([[1.]])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
