test pose resnet

--- a/test/test_resnet/pose_rore_net.ipynb
+++ b/test/test_resnet/pose_rore_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "edab3d8a",
    "metadata": {},
    "outputs": [],
@@ -279,82 +279,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "b7589c13",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'CUDNN': {'BENCHMARK': True, 'DETERMINISTIC': False, 'ENABLED': True},\n",
-       " 'BACKBONE_MODEL': 'pose_resnet',\n",
-       " 'MODEL': 'multi_person_posenet',\n",
-       " 'DATA_DIR': '',\n",
-       " 'GPUS': '0',\n",
-       " 'OUTPUT_DIR': 'output',\n",
-       " 'LOG_DIR': 'log',\n",
-       " 'WORKERS': 4,\n",
-       " 'PRINT_FREQ': 100,\n",
-       " 'DATASET': {'COLOR_RGB': True,\n",
-       "  'TRAIN_DATASET': 'panoptic',\n",
-       "  'TEST_DATASET': 'panoptic',\n",
-       "  'DATA_FORMAT': 'jpg',\n",
-       "  'DATA_AUGMENTATION': False,\n",
-       "  'FLIP': False,\n",
-       "  'ROOT': 'data/panoptic-toolbox/data/',\n",
-       "  'ROT_FACTOR': 45,\n",
-       "  'SCALE_FACTOR': 0.35,\n",
-       "  'TEST_SUBSET': 'validation',\n",
-       "  'TRAIN_SUBSET': 'train',\n",
-       "  'ROOTIDX': 2,\n",
-       "  'CAMERA_NUM': 5},\n",
-       " 'NETWORK': {'PRETRAINED_BACKBONE': 'models/pose_resnet50_panoptic.pth.tar',\n",
-       "  'PRETRAINED': '',\n",
-       "  'TARGET_TYPE': 'gaussian',\n",
-       "  'IMAGE_SIZE': [960, 512],\n",
-       "  'HEATMAP_SIZE': [240, 128],\n",
-       "  'SIGMA': 3,\n",
-       "  'NUM_JOINTS': 15,\n",
-       "  'USE_GT': False},\n",
-       " 'POSE_RESNET': {'FINAL_CONV_KERNEL': 1,\n",
-       "  'DECONV_WITH_BIAS': False,\n",
-       "  'NUM_DECONV_LAYERS': 3,\n",
-       "  'NUM_DECONV_FILTERS': [256, 256, 256],\n",
-       "  'NUM_DECONV_KERNELS': [4, 4, 4],\n",
-       "  'NUM_LAYERS': 50},\n",
-       " 'LOSS': {'USE_TARGET_WEIGHT': True},\n",
-       " 'TRAIN': {'BATCH_SIZE': 1,\n",
-       "  'SHUFFLE': True,\n",
-       "  'BEGIN_EPOCH': 0,\n",
-       "  'END_EPOCH': 10,\n",
-       "  'RESUME': True,\n",
-       "  'OPTIMIZER': 'adam',\n",
-       "  'LR': 0.0001},\n",
-       " 'TEST': {'MODEL_FILE': 'model_best.pth.tar', 'BATCH_SIZE': 4},\n",
-       " 'DEBUG': {'DEBUG': True,\n",
-       "  'SAVE_HEATMAPS_GT': True,\n",
-       "  'SAVE_HEATMAPS_PRED': True},\n",
-       " 'MULTI_PERSON': {'SPACE_SIZE': [8000.0, 8000.0, 2000.0],\n",
-       "  'SPACE_CENTER': [0.0, -500.0, 800.0],\n",
-       "  'INITIAL_CUBE_SIZE': [80, 80, 20],\n",
-       "  'MAX_PEOPLE_NUM': 10,\n",
-       "  'THRESHOLD': 0.3},\n",
-       " 'PICT_STRUCT': {'GRID_SIZE': [2000.0, 2000.0, 2000.0],\n",
-       "  'CUBE_SIZE': [64, 64, 64]}}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-6-739f0d546a88>:2: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  cfg = yaml.load(open('cfg.yaml'))\n"
+     ]
     }
    ],
    "source": [
-    "cfg"
+    "import yaml\n",
+    "cfg = yaml.load(open('cfg.yaml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "43dcde0b",
    "metadata": {},
    "outputs": [],
@@ -370,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "da12dd35",
    "metadata": {},
    "outputs": [],
@@ -380,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "c09b5be4",
    "metadata": {},
    "outputs": [
@@ -575,7 +520,7 @@
        ")"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,6 +533,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f9db63b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37773678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2dbdae1",
    "metadata": {},
    "outputs": [],
    "source": []
