GT from matlab to python

--- a/test/extract_features_exemple/resnet50_extracting_features_exemple.ipynb
+++ b/test/extract_features_exemple/resnet50_extracting_features_exemple.ipynb
@@ -14578,17 +14578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "8cd794d5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "224\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(1, 7, 7, 512)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14607,9 +14614,10 @@
     "img_path = 'elephant.jpg'\n",
     "img = image.load_img(img_path, target_size=(224, 224))\n",
     "x = image.img_to_array(img)\n",
+    "print(len(x))\n",
+    "\n",
     "x = np.expand_dims(x, axis=0)\n",
     "x = preprocess_input(x)\n",
-    "\n",
     "features512 = model.predict(x)\n",
     "np.shape(features512)"
    ]
